<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/device_header">

        <EditTextPreference
            app:key="device_name"
            app:title="@string/device_name"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:key="val_mode"
            android:title="評価モード"
            android:defaultValue="false" />

        <EditTextPreference
            app:key="model_type"
            app:title="@string/model_type"
            android:defaultValue="default"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="nms_thre"
            app:title="@string/nms_thre"
            android:defaultValue="default"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="class_thre"
            app:title="@string/class_thre"
            android:defaultValue="default"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>